# checkson

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
checkson/: __init__.py  __main__.py
checkson/checkers/: __init__.py  domains.py  github.py
checkson/cli/: __init__.py  main.py
checkson/utils/: __init__.py  config.py  http.py  terminal.py
