[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "checkson"
version = "1.0.0"
description = "A fast, user-friendly availability checker for GitHub usernames, repositories, and domain names"
readme = "README.md"
authors = [
    {name = "Nipicoco", email = "json2002@proton.me"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["github", "domain", "availability", "checker", "username"]
dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "typer>=0.9.0",
    "aiohttp>=3.9.3",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/nipicoco/checkson"
"Bug Tracker" = "https://github.com/nipicoco/checkson/issues"

[project.scripts]
checkson = "checkson.cli.main:app"

[tool.setuptools]
packages = ["checkson", "checkson.utils", "checkson.cli", "checkson.checkers"] 